# diagnostics

./: README.md  generage-svg-v2.py  generage-svg.py  pyproject.toml  script.js
example/: README.md  train.py  train_loop_example.py
src/: diagnostics.py
src/diagnostics/: __init__.py  diagnostics.py  hooks.py
src/tools/: __init__.py  cli.py  common.py  compare_epochs.py  param_importance.py  param_magnitude.py  show_eigs.py  show_infinite.py  show_rms.py
