[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nndiagnostics"
version = "0.1.1"
description = "Lightweight PyTorch tensor diagnostics hooks for training loops"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Next-gen Kaldi Team" }]
dependencies = [
  "torch>=1.13",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
packages = ["diagnostics"]
